; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_comm.c_test_BuildCommDCBAndTimeoutsA.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_comm.c_test_BuildCommDCBAndTimeoutsA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"BuildCommDCBAndTimeoutsA\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i32, i32*, i32*)* @test_BuildCommDCBAndTimeoutsA to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_BuildCommDCBAndTimeoutsA(i8* %0, i32* %1, i32 %2, i32* %3, i32* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %14 = load i32, i32* %8, align 4
  %15 = call i32 @memset(i32* %12, i32 %14, i32 4)
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @memset(i32* %13, i32 %16, i32 4)
  %18 = call i32 @SetLastError(i32 -559038737)
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 @BuildCommDCBAndTimeoutsA(i8* %19, i32* %12, i32* %13)
  store i32 %20, i32* %11, align 4
  %21 = load i32*, i32** %7, align 8
  %22 = load i32, i32* %8, align 4
  %23 = load i32, i32* %11, align 4
  %24 = call i32 @check_result(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32* %21, i32 %22, i32 %23)
  %25 = load i32*, i32** %7, align 8
  %26 = load i32, i32* %8, align 4
  %27 = load i32*, i32** %9, align 8
  %28 = call i32 @check_dcb(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32* %25, i32 %26, i32* %12, i32* %27)
  %29 = load i32*, i32** %7, align 8
  %30 = load i32, i32* %8, align 4
  %31 = load i32*, i32** %10, align 8
  %32 = call i32 @check_timeouts(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32* %29, i32 %30, i32* %13, i32* %31)
  ret void
}

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @SetLastError(i32) #1

declare dso_local i32 @BuildCommDCBAndTimeoutsA(i8*, i32*, i32*) #1

declare dso_local i32 @check_result(i8*, i32*, i32, i32) #1

declare dso_local i32 @check_dcb(i8*, i32*, i32, i32*, i32*) #1

declare dso_local i32 @check_timeouts(i8*, i32*, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
